fix#25): Ensure wheel is not too small

--- a/src/styles/spinner.scss
+++ b/src/styles/spinner.scss
@@ -57,7 +57,7 @@ text {
 }
 
 #chart {
-  max-width: calc(50%);
+  max-width: calc(90%);
   margin-left: auto;
   margin-right: auto;
 }
